--- a/index.html
+++ b/index.html
@@ -33,33 +33,53 @@
 
   <!-- Navbar -->
   <nav class="bg-black bg-opacity-90 fixed top-0 w-full z-30">
-    <div class="max-w-5xl mx-auto px-4 py-5 md:py-4 flex justify-between items-center relative">
+    <div class="max-w-5xl mx-auto px-4 py-5 flex justify-between items-center relative">
       
-      <div class="text-2xl font-semibold">
+      <div class="text-3xl font-semibold whitespace-nowrap">
         Brian Kenji Stong
       </div>
 
       <!-- Links container -->
-      <div id="menu" class="hidden md:flex space-x-6 text-base font-medium">
-        <a href="assets/files/Brian_Stong_Resume_GameDeveloper.pdf" target="_blank" class="inline-flex items-center whitespace-nowrap group">
-          <i class="fas fa-file-alt"></i>&nbsp;<span class="group-hover:underline group-active:underline">Resume</span>
+      <div id="menu" class="flex space-x-6 text-base font-medium">
+        <a href="assets/files/Brian_Stong_Resume_GameDeveloper.pdf" target="_blank" class="text-lg font-medium inline-flex items-center whitespace-nowrap group">
+          <i class="fas fa-file-alt"></i>
+          &nbsp;
+          <span class="relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-0 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 group-hover:after:w-full">
+            Resume
+          </span>
         </a>
-        <a href="https://github.com/Stonger44" target="_blank" class="inline-flex items-center whitespace-nowrap  group">
-          <i class="fab fa-github"></i>&nbsp;<span class="group-hover:underline group-active:underline">GitHub</span>
+        <a href="https://github.com/Stonger44" target="_blank" class="text-lg font-medium inline-flex items-center whitespace-nowrap  group">
+          <i class="fab fa-github"></i>
+          &nbsp;
+          <span class="relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-0 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 group-hover:after:w-full">
+            GitHub
+          </span>
         </a>
-        <a href="https://medium.com/@stonger44" target="_blank" class="inline-flex items-center whitespace-nowrap group">
-          <i class="fab fa-medium"></i>&nbsp;<span class="group-hover:underline group-active:underline">Medium</span>
+        <a href="https://medium.com/@stonger44" target="_blank" class="text-lg font-medium inline-flex items-center whitespace-nowrap group">
+          <i class="fab fa-medium"></i>
+          &nbsp;
+          <span class="relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-0 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 group-hover:after:w-full">
+            Medium
+          </span>
         </a>
-        <a href="https://stonger44.itch.io/" target="_blank" class="inline-flex items-center whitespace-nowrap  group">
-          <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4" alt="Itch.io" />&nbsp;<span class="group-hover:underline group-active:underline">Itch.io</span>
+        <a href="https://stonger44.itch.io/" target="_blank" class="text-lg font-medium inline-flex items-center whitespace-nowrap group">
+          <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4" alt="Itch.io" />
+          &nbsp;
+          <span class="relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-0 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 group-hover:after:w-full">
+            Itch.io
+          </span>
         </a>
-        <a href="https://www.linkedin.com/in/brian-stong/" target="_blank" class="inline-flex items-center whitespace-nowrap group">
-          <i class="fab fa-linkedin"></i>&nbsp;<span class="group-hover:underline group-active:underline">LinkedIn</span>
+        <a href="https://www.linkedin.com/in/brian-stong/" target="_blank" class="text-lg font-medium inline-flex items-center whitespace-nowrap group">
+          <i class="fab fa-linkedin"></i>
+          &nbsp;
+          <span class="relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-0 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 group-hover:after:w-full">
+            LinkedIn
+          </span>
         </a>
       </div>
 
       <!-- Hamburger button -->
-      <button id="menu-toggle" class="md:hidden absolute right-4 text-white">
+      <button id="menu-toggle" class="absolute right-4 text-white">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
         </svg>
@@ -68,31 +88,31 @@
     </div>
 
     <!-- Mobile menu (shown when hamburger clicked) -->
-    <div id="mobile-menu" class="md:hidden max-h-0 overflow-hidden transition-all duration-75 ease-in-out py-0 flex-col space-y-4 bg-black bg-opacity-90 px-4 text-base font-medium max-w-5xl mx-auto absolute right-0">
+    <div id="mobile-menu" class="max-h-0 overflow-hidden transition-all duration-75 ease-in-out py-0 flex-col space-y-4 bg-black bg-opacity-90 px-4 text-xl font-medium max-w-5xl mx-auto absolute right-0">
       <div>
-        <a href="assets/files/Brian_Stong_Resume_GameDeveloper.pdf" target="_blank" class="inline-flex items-center whitespace-nowrap group">
-          <i class="fas fa-file-alt"></i>&nbsp;<span class="group-hover:underline group-active:underline">Resume</span>
+        <a href="assets/files/Brian_Stong_Resume_GameDeveloper.pdf" target="_blank" class="inline-flex items-center whitespace-nowrap">
+          <i class="fas fa-file-alt"></i>&nbsp;<span>Resume</span>
         </a>
       </div>
       <div>
-        <a href="https://github.com/Stonger44" target="_blank" class="inline-flex items-center whitespace-nowrap group">
-          <i class="fab fa-github"></i>&nbsp;<span class="group-hover:underline group-active:underline">GitHub</span>
+        <a href="https://github.com/Stonger44" target="_blank" class="inline-flex items-center whitespace-nowrap">
+          <i class="fab fa-github"></i>&nbsp;<span>GitHub</span>
         </a>
       </div>
       <div>
-        <a href="https://medium.com/@stonger44" target="_blank" class="inline-flex items-center whitespace-nowrap group">
-          <i class="fab fa-medium"></i>&nbsp;<span class="group-hover:underline group-active:underline">Medium</span>
+        <a href="https://medium.com/@stonger44" target="_blank" class="inline-flex items-center whitespace-nowrap">
+          <i class="fab fa-medium"></i>&nbsp;<span>Medium</span>
         </a>
       </div>
       <div>
-        <a href="https://stonger44.itch.io/" target="_blank" class="inline-flex items-center whitespace-nowrap group">
-          <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4 translate-x-[2px]" alt="Itch.io" />
-          &nbsp;<span class="group-hover:underline group-active:underline translate-x-[5px]">Itch.io</span>
+        <a href="https://stonger44.itch.io/" target="_blank" class="inline-flex items-center whitespace-nowrap">
+          <img src="./assets/images/itchio-logo-textless-white.png" class="w-5 h-5 translate-x-[2px]" alt="Itch.io" />
+          &nbsp;<span class="translate-x-[5px]">Itch.io</span>
         </a>
       </div>
       <div>
-        <a href="https://www.linkedin.com/in/brian-stong/" target="_blank" class="inline-flex items-center whitespace-nowrap group">
-          <i class="fab fa-linkedin"></i>&nbsp;<span class="group-hover:underline group-active:underline">LinkedIn</span>
+        <a href="https://www.linkedin.com/in/brian-stong/" target="_blank" class="inline-flex items-center whitespace-nowrap">
+          <i class="fab fa-linkedin"></i>&nbsp;<span>LinkedIn</span>
         </a>
       </div>
     </div>
@@ -256,63 +276,34 @@
 
   <!-- Footer -->
   <footer class="relative z-30 mt-auto bg-black text-center py-6 select-text w-full">
-    <nav class="standard-screen-size my-6">
-      <a href="assets/files/Brian_Stong_Resume_GameDeveloper.pdf" class="mx-2 inline-flex items-center whitespace-nowrap group">
-        <i class="fas fa-file-alt"></i>&nbsp;<span class="group-hover:underline group-active:underline">Resume</span>
+
+    <nav class="my-6 text-3xl">
+      <a href="assets/files/Brian_Stong_Resume_GameDeveloper.pdf" class="mx-2 inline-flex items-center whitespace-nowrap relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-[-6px] after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 hover:after:w-[65%]">
+        <i class="fas fa-file-alt"></i>
       </a>
-      <a href="https://github.com/Stonger44" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
-        <i class="fab fa-github"></i>&nbsp;<span class="group-hover:underline group-active:underline">GitHub</span>
+      <a href="https://github.com/Stonger44" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-[-6px] after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 hover:after:w-[75%]">
+        <i class="fab fa-github"></i>
       </a>
-      <a href="https://medium.com/@stonger44" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
-        <i class="fab fa-medium"></i>&nbsp;<span class="group-hover:underline group-active:underline">Medium</span>
+      <a href="https://medium.com/@stonger44" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-[-6px] after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 hover:after:w-[75%]">
+        <i class="fab fa-medium"></i>
       </a>
-      <a href="https://stonger44.itch.io/" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
-        <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4"></img>&nbsp;<span class="group-hover:underline group-active:underline">Itch.io</span>
+      <a href="https://stonger44.itch.io/" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-[-10px] after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 hover:after:w-[90%]">
+        <img src="./assets/images/itchio-logo-textless-white.png" class="w-7 h-7 relative top-[3px]"></img>
       </a>
-      <a href="https://www.linkedin.com/in/brian-stong/" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
-        <i class="fab fa-linkedin"></i>&nbsp;<span class="group-hover:underline group-active:underline">LinkedIn</span>
+      <a href="https://www.linkedin.com/in/brian-stong/" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-[-6px] after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 hover:after:w-[75%]">
+        <i class="fab fa-linkedin"></i>
       </a>
     </nav>
-    <div class="small-screen-size">
-      <div class="my-1">
-        <a href="assets/files/Brian_Stong_Resume_GameDeveloper.pdf" class="mx-2 inline-flex items-center whitespace-nowrap group">
-          <i class="fas fa-file-alt"></i>&nbsp;<span class="group-hover:underline group-active:underline">Resume</span>
-        </a>
-      </div>
-      <div class="my-1">
-        <a href="https://github.com/Stonger44" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
-          <i class="fab fa-github"></i>&nbsp;<span class="group-hover:underline group-active:underline">GitHub</span>
-        </a>
-      </div>
-      <div class="my-1">
-        <a href="https://medium.com/@stonger44" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
-          <i class="fab fa-medium"></i>&nbsp;<span class="group-hover:underline group-active:underline">Medium</span>
-        </a>
-      </div>
-      <div class="my-1">
-        <a href="https://stonger44.itch.io/" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
-          <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4"></img>&nbsp;<span class="group-hover:underline group-active:underline">Itch.io</span>
-        </a>
-      </div>
-      <div class="my-1">
-        <a href="https://www.linkedin.com/in/brian-stong/" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
-          <i class="fab fa-linkedin"></i>&nbsp;<span class="group-hover:underline group-active:underline">LinkedIn</span>
-        </a>
-      </div>
+
+    <div class="mt-10 mb-6 text-xl">
+      &copy; <span class="year"></span>
+      <span class="relative top-[-1px]">&nbsp;|&nbsp;</span>
+      <a href="mailto:brian.kenji.stong@gmail.com"
+        class="relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-[-3px] after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 hover:after:w-[85%]">
+        <i class="fa-solid fa-envelope text-2xl relative top-[2px]"></i>
+      </a>
     </div>
-    <div class="standard-screen-size mt-10 mb-6">
-      Copyright &copy; <span class="year"></span>
-      <span>&nbsp;|&nbsp;</span>
-      <a href="mailto:brian.kenji.stong@gmail.com" class="hover:underline active:underline">brian.kenji.stong@gmail.com</a>
-    </div>
-    <div class="small-screen-size mt-10 mb-6">
-      <div class="my-2">
-        <a href="mailto:brian.kenji.stong@gmail.com" class="hover:underline active:underline">brian.kenji.stong@gmail.com</a>
-      </div>
-      <div class="my-2">
-        Copyright &copy; <span class="year"></span>
-      </div>
-    </div>
+
   </footer>
 
   <!-- Black bottom overlay to cover overscroll background -->
