--- a/index.html
+++ b/index.html
@@ -142,20 +142,22 @@
       <!-- Projects Section -->
       <section id="projects" class="container mx-auto px-4 py-10 space-y-12">
 
-        <h2 class="text-4xl font-bold mb-4 text-center">Projects</h2>
-        <hr />
+        <div>
+          <h2 class="text-4xl font-bold mb-4 text-center">Projects</h2>
+          <hr />
+        </div>
 
         <!-- Cozy Island -->
-        <div class="flex flex-col items-center md:flex-row gap-6">
+        <div class="flex flex-col items-center lg:flex-row gap-6">
           <video
             src="assets/videos/CozyIsland_Demo.mp4"
             autoplay
             muted
             loop
             playsinline
-            class="w-full md:w-1/2 rounded-lg shadow-lg"
+            class="w-full lg:w-1/2 rounded-lg shadow-lg"
           ></video>
-          <div class="md:w-1/2 flex flex-col space-y-3">
+          <div class="lg:w-1/2 flex flex-col space-y-3">
             <div>
               <h2 class="text-3xl font-bold inline">Cozy Island</h2>
               <span class="align-text-bottom inline-flex items-center whitespace-nowrap">(Solo Developer)</span>
@@ -186,16 +188,16 @@
         <hr />
 
         <!-- Galaxy Shooter -->
-        <div class="flex flex-col items-center md:flex-row gap-6">
+        <div class="flex flex-col items-center lg:flex-row gap-6">
           <video
             src="assets/videos/GalaxyShooter_Demo.mp4"
             autoplay
             muted
             loop
             playsinline
-            class="w-full md:w-1/2 rounded-lg shadow-lg"
+            class="w-full lg:w-1/2 rounded-lg shadow-lg"
           ></video>
-          <div class="md:w-1/2 flex flex-col space-y-3">
+          <div class="lg:w-1/2 flex flex-col space-y-3">
             <div>
               <h2 class="text-3xl font-bold inline">Galaxy Shooter</h2>
               <span class="align-text-bottom inline-flex items-center whitespace-nowrap">(Solo Developer)</span>
@@ -226,16 +228,16 @@
         <hr />
 
         <!-- Mech Tower Defense -->
-        <div class="flex flex-col items-center md:flex-row gap-6">
+        <div class="flex flex-col items-center lg:flex-row gap-6">
           <video
             src="assets/videos/MechTowerDefense_Demo.mp4"
             autoplay
             muted
             loop
             playsinline
-            class="w-full md:w-1/2 rounded-lg shadow-lg"
+            class="w-full lg:w-1/2 rounded-lg shadow-lg"
           ></video>
-          <div class="md:w-1/2 flex flex-col space-y-3">
+          <div class="lg:w-1/2 flex flex-col space-y-3">
             <div>
               <h2 class="text-3xl font-bold inline">Mech Tower Defense</h2>
               <span class="align-text-bottom inline-flex items-center whitespace-nowrap">(Solo Developer)</span>
