--- a/index.html
+++ b/index.html
@@ -52,11 +52,15 @@
   </div>
 
   <!-- Navbar -->
-  <nav class="bg-black bg-opacity-90 fixed top-0 w-full z-30">
-    <div class="max-w-5xl mx-auto px-4 py-5 flex justify-between items-center relative">
+  <nav class="bg-black bg-opacity-90 fixed top-0 w-full z-30 border-b border-white">
+    <div class="max-w-5xl mx-auto px-4 py-1 flex justify-between items-center relative">
       
-      <div class="text-3xl font-semibold whitespace-nowrap">
-        Brian Kenji Stong
+      <!-- Logo and title -->
+      <div class="flex items-center text-3xl font-semibold whitespace-nowrap">
+        <span id="navbar-title" class="leading-none">Brian Kenji Stong</span>
+        <a href="https://studiotwofours.com/" target="_blank">
+          <img src="assets/images/StudioTwoFours_Dice_512x512_Transparent.png" class="inline-block w-auto h-16 select-none" alt="Studio Two Fours Dice" />
+        </a>
       </div>
 
       <!-- Links container -->
@@ -297,7 +301,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="relative z-30 mt-auto bg-black text-center py-6 select-text w-full">
+  <footer class="relative z-30 mt-auto bg-black text-center py-6 select-text w-full border-t border-white">
 
     <nav class="my-6 text-3xl">
       <a href="assets/files/Brian_Stong_Resume_GameDeveloper.pdf" class="mx-2 inline-flex items-center whitespace-nowrap relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-[-6px] after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 hover:after:w-[65%]">
